# micro-shop

./: .gitignore  00_introduction.html  01_setup.html  02_webserver.html  03_database.html  Cargo.toml  README.md  book.toml  index.html  print.html  searchindex.js  searchindex.json
docs/: 00_introduction.md  01_setup.md  02_webserver.md  03_database.md  SUMMARY.md
src/: main.rs
src/models/: product.rs
