[package]
name = "micro-shop"
version = "0.1.0"
authors = ["huhn511 <huhn@einfachIOTA.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
serde = "1.0.111"
serde_derive = "1.0.111"
serde_json = "1.0.55"